# DSA

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
attack/: __init__.py  base.py  dsa.py  i_fgsm.py  mi_fgsm.py  utils.py
config/: attack_config.py
models/: base.py  utils.py
src/dsa/: __init__.py
utils/: criterion.py  distance.py  result.py
